--- a/package.json
+++ b/package.json
@@ -11,41 +11,32 @@
     "categories": [
         "Extension Packs"
     ],
-    "extensionPack": [ 
-        "aaron-bond.better-comments", 
-        "anseki.vscode-color", 
-        "bierner.markdown-preview-github-styles", 
-        "christian-kohler.npm-intellisense", 
-        "christian-kohler.path-intellisense", 
-        "CoenraadS.bracket-pair-colorizer-2", 
-        "cschlosser.doxdocgen", 
-        "DavidAnson.vscode-markdownlint", 
-        "dbaeumer.vscode-eslint", 
-        "dsznajder.es7-react-js-snippets", 
-        "eamodio.gitlens", 
-        "ecmel.vscode-archiver", 
-        "eg2.vscode-npm-script", 
-        "esbenp.prettier-vscode", 
-        "formulahendry.auto-rename-tag", 
-        "humao.rest-client", 
-        "jebbs.plantuml", 
-        "mgmcdermott.vscode-language-babel", 
-        "ms-python.python", 
-        "ms-toolsai.jupyter", 
-        "ms-vscode-remote.remote-ssh", 
-        "ms-vscode-remote.remote-ssh-edit", 
-        "ms-vscode.cmake-tools", 
-        "ms-vscode.cpptools", 
-        "mutantdino.resourcemonitor", 
-        "naumovs.color-highlight", 
-        "pnp.polacode", 
-        "ritwickdey.LiveServer", 
-        "shardulm94.trailing-spaces", 
-        "shd101wyy.markdown-preview-enhanced", 
-        "streetsidesoftware.code-spell-checker", 
-        "twxs.cmake", 
-        "VisualStudioExptTeam.vscodeintellicode", 
-        "vscode-icons-team.vscode-icons", 
-        "yzhang.markdown-all-in-one"
+    "extensionPack": [
+        "anseki.vscode-color",
+        "bierner.markdown-preview-github-styles",
+        "christian-kohler.npm-intellisense",
+        "christian-kohler.path-intellisense",
+        "DavidAnson.vscode-markdownlint",
+        "dbaeumer.vscode-eslint",
+        "eamodio.gitlens",
+        "ecmel.vscode-archiver",
+        "eg2.vscode-npm-script",
+        "formulahendry.auto-rename-tag",
+        "mgmcdermott.vscode-language-babel",
+        "ms-python.python",
+        "ms-vscode-remote.remote-ssh",
+        "ms-vscode-remote.remote-ssh-edit",
+        "ms-vscode.cmake-tools",
+        "ms-vscode.cpptools",
+        "mutantdino.resourcemonitor",
+        "ritwickdey.LiveServer",
+        "shardulm94.trailing-spaces",
+        "streetsidesoftware.code-spell-checker",
+        "twxs.cmake",
+        "VisualStudioExptTeam.vscodeintellicode",
+        "vscode-icons-team.vscode-icons",
+        "yzhang.markdown-all-in-one",
+        "ms-azuretools.vscode-docker",
+        "ms-vscode-remote.remote-containers"
     ]
 }
